<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#000">



        <TextView
            android:id="@+id/go_on_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:padding="8dp"
            android:text="@string/retake"
            android:textColor="@color/font_white"/>

        <TextView
            android:layout_centerInParent="true"
            android:textColor="@color/font_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/search_by_photo"/>

        <Button
            android:id="@+id/question_search_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:paddingLeft="8dp"
            android:text="@string/cancel"
            android:textColor="@color/font_white"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/font_white">

        <!--<Button-->
        <!--android:id="@+id/question_search_cancel_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:background="@null"-->
        <!--android:paddingLeft="@dimen/border_space"-->
        <!--android:text="@string/str_cancel"-->
        <!--android:textColor="@color/color_darkness"-->
        <!--android:textSize="@dimen/text_size_ms"/>-->

        <EditText
            android:id="@+id/question_search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@null"
            android:drawablePadding="5dip"
            android:hint="@string/input_search_content"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/font_dark"
            android:textColorHint="@color/font_light"
            android:textSize="14sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/camera_crop_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/recognize_camera_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/camera_result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/font_orange"/>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
